<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--
    -->
    <string name="app_name">Just Java</string>
    <string name="Quantity" translatable="false">Quantity</string>
    <string name="quantity_text_view" translatable="false">1</string>
    <string name="order_button_text" translatable="false">order</string>
    <string name="order_summary_textView" translatable="false">Order Summary</string>
    <string name="price_view" translatable="false">0</string>
    <string name="increment" translatable="false">+</string>
    <string name="decrement" translatable="false">-</string>
    <string name="toppings" translatable="false">Toppings</string>
    <string name="whipped_cream" translatable="false">Whipped Cream</string>
    <string name="chocolate_topping" translatable="false">Chocolate Topping</string>
    <string name="type_your_name_here" translatable="false">Type Your Name Here</string>
    <string name="add_whipped" translatable="false">Add Whipped Cream: <xliff:g id="whip" example="true">%b</xliff:g></string>
    <string name="add_choco" translatable="false">Add Chocolate Topping: <xliff:g id="choco" example="true">%b</xliff:g></string>
    <string name="total" translatable="false">Total: $<xliff:g id="price" example="100">%i</xliff:g></string>
    <string name="name_desc" translatable="false">Name: <xliff:g id="name" example="Rob">%s</xliff:g></string>
    <string name="thanks">Thank You!</string>
</resources>
